Bug 387613 - sending mail with 2MB attachment delivers but still shows error
Summary: sending mail with 2MB attachment delivers but still shows error
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Mail Dispatcher Agent (other bugs)
Version First Reported In: GIT (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 388645 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-12-05 07:33 UTC by Martin Koller
Modified: 2018-01-17 22:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2017-12-05 07:33:01 UTC
When I send an email having a ca. 2 MB attachment, the send always fails with the error "Failed to transport message. Connection to server lost."

But the mail was still sent!
I just tested this by sending the mail to myself. I received the full mail, but the original mail is still in my outbox
Comment 1 Martin Koller 2017-12-09 11:34:23 UTC
Git commit 400942fde2e90c79dca9d60ce94293cffaccde38 by Martin Koller.
Committed on 09/12/2017 at 11:33.
Pushed by mkoller into branch 'Applications/17.12'.

do not cancel send job after 10s timeout

Differential Revision: https://phabricator.kde.org/D9256

M  +10   -1    src/session.cpp

https://commits.kde.org/ksmtp/400942fde2e90c79dca9d60ce94293cffaccde38
Comment 2 Martin Koller 2017-12-09 11:34:33 UTC
Git commit 28b99a142ea66b123cc1d27125beff80b3c58188 by Martin Koller.
Committed on 09/12/2017 at 11:31.
Pushed by mkoller into branch 'master'.

do not cancel send job after 10s timeout

Differential Revision: https://phabricator.kde.org/D9256

M  +10   -1    src/session.cpp

https://commits.kde.org/ksmtp/28b99a142ea66b123cc1d27125beff80b3c58188
Comment 3 Christoph Feck 2018-01-17 22:14:29 UTC
*** Bug 388645 has been marked as a duplicate of this bug. ***