do not cancel send job after 10s timeout

Differential Revision: https://phabricator.kde.org/D9256
BUG: 387613